<resources>
    <string name="app_name">LicentaApp</string>
    <string name="title">GADGET FINDER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_find_your_device_text">FIND YOUR DEVICE</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="already_registered_log_in_here">Already Registered? Log in here</string>
    <string name="register">Register</string>
    <string name="repeat_pasword">Repeat Pasword</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_reigster_here">Don\'t have an account? Reigster Here</string>
    <string name="phone">Phone Number</string>
    <string name="log_in">Log In</string>
    <string name="instructions_login">Please use the form below to authenticate yourself in the application</string>
    <string name="log_out">Log Out</string>
    <string name="lv_row_item_default_value">-</string>
    <string name="pleae_connect_message">If you want to see your account information or add a product to favourites, please log in or register.</string>
    <string name="ro_item_titlu">Titlu</string>
    <string name="ro_item_pret">Pret</string>
    <string name="ro_item_memorie">Memorie</string>
    <string name="ro_item_culoare">Culoare</string>
    <string name="ro_item_pret_completation">%1$s Lei</string>
    <string name="ro_item_memorie_completation">%1$s GB</string>
    <string name="show_specs">Show Specs</string>
    <string name="dual_sim_yes">Dual sim: Yes</string>
    <string name="dual_sim_no">Dual sim: No</string>
    <string name="spec_platform">Operating system: %1$s</string>
    <string name="spec_colour">Colour: %1$s</string>
    <string name="spec_storage">Storage: %1$s Gb</string>
    <string name="spec_ram">RAM memory: %1$s Gb</string>
    <string name="spec_battery">Battery capacity: %1$s mAh</string>
    <string name="spec_resolution">Resolution: %1$s pixels</string>
    <string name="spec_dimensions">%1$smm x %2$smm x %3$smm</string>
    <string name="spec_Mass">Mass: %1$s g</string>
    <string name="spec_primary_camera">Primary Camera: %1$s Mpx</string>
    <string name="spec_front_camera">Front Camera: %1$s Mpx</string>
    <string name="spec_connector">Connector: %1$s</string>
    <string name="spec_year">Year: %1$s</string>
    <string name="question1">What is your preferred phone brand?</string>
    <string name="apple">Apple</string>
    <string name="samsung">Samsung</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="google">Google</string>
    <string name="huawei">Huawei</string>
    <string name="oneplus">OnePlus</string>
    <string name="question2">How much storage would you like your phone to have?</string>
    <string name="info_message_q2">Storage refers to the amount of internal space your phone has for apps, photos, videos, and other data. If you plan to store a lot of media on your phone, you\'ll need more storage.</string>
    <string name="info_message_q3">Battery capacity refers to the amount of power your phone\'s battery can hold. A higher battery capacity means your phone will last longer between charges.</string>
    <string name="info_message_q4">Screen resolution refers to the number of pixels on the screen. A higher resolution means a clearer and more detailed display, but it also uses more battery life.</string>
    <string name="info_message_q5">RAM (Random Access Memory) is the amount of memory your phone has available to run apps and processes. The more RAM your phone has, the faster it will be able to handle multiple tasks at once.</string>
    <string name="info_message_q6">Primary camera resolution refers to the number of megapixels on your phone\'s main camera. A higher resolution means your photos will be sharper and more detailed.</string>
    <string name="okay">OKAY</string>
    <string name="_64_gb">64 GB</string>
    <string name="_128_gb">128 GB</string>
    <string name="_256_gb">256 GB</string>
    <string name="_512_gb">512 GB</string>
    <string name="_1024_gb">1024 GB</string>
    <string name="question3">What battery capacity do you think you need?</string>
    <string name="question4">What is your preferred screen resolution?</string>
    <string name="question5">How much RAM suits you the best?</string>
    <string name="question6">What\'s your favorite resolution for the main camera?</string>
    <string name="question7">How about your front camera?</string>
    <string name="question8">Please choose a price range so that we can find the best options for you</string>
    <string name="_3000_mah">3000 mAh</string>
    <string name="_4000_mah">4000 mAh</string>
    <string name="_5000_mah">5000 mAh</string>
    <string name="_6000_mah">6000 mAh</string>
    <string name="hd_720p">HD (720p)</string>
    <string name="fhd_1080p">FHD (1080p)</string>
    <string name="qhd_1440p">QHD (1440p)</string>
    <string name="_4k_2160p">4K (2160p)</string>
    <string name="_4_gb">4 GB</string>
    <string name="_6_gb">6 GB</string>
    <string name="_8_gb">8 GB</string>
    <string name="_12_gb">12 GB</string>
    <string name="_0_50_mpx">0-50 Mpx</string>
    <string name="_50_mpx">50 Mpx</string>
    <string name="_64_mpx">64 Mpx</string>
    <string name="_64_more_mpx"><![CDATA[64> Mpx]]></string>
    <string name="min_price">Min price Lei</string>
    <string name="max_price">Max price Lei</string>
    <string name="find">Find</string>
    <string name="q7_error_msg">Please insert minimum and maximum price</string>
    <string name="start_over">START OVER</string>
    <string name="buy">BUY</string>
    <string name="google_map_key">AIzaSyCaqUWylYAOuNcuO8DKhrWuwdJrZpx6llc</string>
    <string name="ios">iOS</string>
    <string name="android">Android</string>
    <string name="emui_huawei">EMUI</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="irrelevant">irrelevant</string>
    <string name="medium_quality">medium quality</string>
    <string name="high_quality">high quality</string>
    <string name="professional">professional</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="compare">Compare</string>
    <string name="spec_1">Spec 1</string>
    <string name="spec_2">Spec 2</string>
    <string name="spec_3">Spec 3</string>
    <string name="spec_4">Spec 4</string>
    <string name="spec_5">Spec 5</string>
    <string name="spec_6">Spec 6</string>
    <string name="spec_7">Spec 7</string>
    <string name="spec_8">Spec 8</string>
    <string name="spec_9">Spec 9</string>
    <string name="spec_10">Spec 10</string>
    <string name="spec_11">Spec 11</string>
    <string name="spec_12">Spec 12</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>

</resources>