<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_beige"

    tools:context=".fragments.quetionnaire.StorageQ2Fragment">


    <TextView
        android:id="@+id/tv_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/question2"
        android:textSize="28sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_64_gb"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/audiowide"
        android:text="@string/_64_gb"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question1"
        app:layout_constraintVertical_bias="0.16000003" />

    <Button
        android:id="@+id/btn_128_gb"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/audiowide"
        android:text="@string/_128_gb"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question1"
        app:layout_constraintVertical_bias="0.16000003" />

    <Button
        android:id="@+id/btn_256_gb"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/audiowide"
        android:text="@string/_256_gb"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_64_gb" />

    <Button
        android:id="@+id/btn_512_gb"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/audiowide"
        android:text="@string/_512_gb"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_128_gb" />

    <Button
        android:id="@+id/btn_1024_gb"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/audiowide"
        android:text="@string/_1024_gb"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_512_gb" />

    <ImageButton
        android:id="@+id/btn_info_q2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/background_beige"
        android:src="@drawable/question_mark_5656992"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>