<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment">


    <Button
        android:id="@+id/btn_login_page"
        android:layout_width="180dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/audiowide"
        android:text="@string/log_in"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_register_page"
        android:layout_width="180dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/audiowide"
        android:text="@string/register"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="307dp"
        android:layout_height="153dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/pleae_connect_message"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>