<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_beige"
    tools:context=".fragments.quetionnaire.PrimaryCameraQ6Fragment">

    <TextView
        android:id="@+id/tv_question6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/question6"
        android:textSize="28sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_0_50_mpx"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/audiowide"
        android:text="@string/_0_50_mpx"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="28sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question6"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btn_50_mpx"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/audiowide"
        android:text="@string/_50_mpx"
        android:textAllCaps="false"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question6"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btn_64_mpx"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/audiowide"
        android:text="@string/_64_mpx"
        android:textAllCaps="false"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_0_50_mpx" />

    <Button
        android:id="@+id/btn_64_more_mpx"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/audiowide"
        android:text="@string/_64_more_mpx"
        android:textAllCaps="false"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_50_mpx" />

    <ImageButton
        android:id="@+id/btn_info_q6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/background_beige"
        android:src="@drawable/question_mark_5656992"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>